--- a/smart-exchange-frnt/src/app/app.component.html
+++ b/smart-exchange-frnt/src/app/app.component.html
@@ -14,7 +14,7 @@
     <app-cacula-cambio class="calcula-cambio-home"></app-cacula-cambio> -->
     <router-outlet></router-outlet>
 </div>
-<a class="whatsapp-logo" [href]="url_watsapp" target="_blank" matTooltip="Entra aquí" *ngIf="url_watsapp">
+<a class="whatsapp-logo" [href]="url_watsapp" target="_blank" matTooltip="Entra aquí" *ngIf="url_watsapp && esCliente()">
     <img [src]="whatsapp_logo" alt="">
     <div class="color-primary">Chatea con nosotros</div>
 </a>
