--- a/smart-exchange-frnt/src/app/operaciones/tipo-cambio/tipo-cambio.component.html
+++ b/smart-exchange-frnt/src/app/operaciones/tipo-cambio/tipo-cambio.component.html
@@ -1,5 +1,5 @@
 <br>
-<div class="contenido-general">
+<div class="contenido-tipo-cambio">
     <div class="tcForm">
         <form [formGroup]="tcForm" (ngSubmit)="registra()" autocomplete="off">
           <mat-form-field appearance="outline">
@@ -10,6 +10,17 @@
                   </mat-option>
               </mat-select>
           </mat-form-field>
+          <mat-form-field appearance="outline" *ngIf="!esLcExchange">
+              <mat-label>Nombre</mat-label>
+              <input matInput type="text" formControlName="nombre">
+          </mat-form-field>
+          <div class="carga-logo"  *ngIf="!esLcExchange">
+            <mat-label><small>Logo</small></mat-label>
+            <input type="file" accept=".png" #fileInput style="display: none;" (change)="archivoSeleccionado($event)" />
+            <button (click)="fileInput.click()" mat-mini-fab [color]="cargoimagen()?'primary':'warn'" type="button">
+                <mat-icon>image</mat-icon>
+            </button>
+          </div>
             <mat-form-field appearance="outline">
                 <mat-label>Fecha día/mes/año</mat-label>
                 <input formControlName="fecha"  matInput [matDatepicker]="picker">
@@ -31,7 +42,7 @@
             <mat-form-field appearance="outline">
                 <mat-label>Venta</mat-label>
                 <input matInput type="text" formControlName="venta">
-            </mat-form-field><br>
+            </mat-form-field>&nbsp;
             <!-- <mat-slide-toggle formControlName="porDefecto" color="primary">Empezar a utilizar</mat-slide-toggle> -->
             <button mat-fab extended color="primary" [disabled]="estaCargando">
               <mat-icon>check</mat-icon>
@@ -46,9 +57,15 @@
     </div>
     <div class="tcTable">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          <ng-container matColumnDef="logo">
+            <th mat-header-cell *matHeaderCellDef> Logo </th>
+            <td mat-cell *matCellDef="let item"><div class="logo">
+              <img [src]="item.logo" alt="">
+            </div> </td>
+          </ng-container>
           <ng-container matColumnDef="tipo">
-            <th mat-header-cell *matHeaderCellDef> Tipo </th>
-            <td mat-cell *matCellDef="let item"> {{recuperaTipo(item.tipo)}} </td>
+            <th mat-header-cell *matHeaderCellDef> Nombre </th>
+            <td mat-cell *matCellDef="let item"> {{item.nombre}} </td>
           </ng-container>
           <ng-container matColumnDef="registro">
             <th mat-header-cell *matHeaderCellDef> Fecha registro</th>
@@ -60,12 +77,15 @@
             </ng-container>
             <ng-container matColumnDef="estado">
               <th mat-header-cell *matHeaderCellDef> Estado </th>
-              <td mat-cell *matCellDef="let item"> {{item.estado==0?'Activo':'Deshabilitado'}} </td>
+              <td mat-cell *matCellDef="let item">
+                <mat-slide-toggle (change)="cambioEstado(item)" color="primary"><small>Se trabaja</small></mat-slide-toggle>
+                 {{item.estado==0?'Activo':'Deshabilitado'}}
+                </td>
             </ng-container>
-            <ng-container matColumnDef="moneda">
+            <!-- <ng-container matColumnDef="moneda">
               <th mat-header-cell *matHeaderCellDef> Moneda </th>
               <td mat-cell *matCellDef="let item"> {{recuperaNombre(item.moneda)}} </td>
-            </ng-container>
+            </ng-container> -->
             <ng-container matColumnDef="compra">
               <th mat-header-cell *matHeaderCellDef> Compra </th>
               <td mat-cell *matCellDef="let item"> {{item.compra}} </td>
